# Localization-for-Autonomous-cars

./: README.md
Catkin_Ws/src/extended_kalman_filter/: CMakeLists.txt  package.xml
Catkin_Ws/src/extended_kalman_filter/cfg/ekf/: ivs_vse_param_ekf.yaml  odom_pose.yaml
Catkin_Ws/src/extended_kalman_filter/cfg/rviz/: ekf_visualization.rviz
Catkin_Ws/src/extended_kalman_filter/include/ekf/: ekf.hpp  ekf_fusion.hpp  navsat_conversions.hpp
Catkin_Ws/src/extended_kalman_filter/launch/: vse_ekf.launch
Catkin_Ws/src/extended_kalman_filter/msg/: TempGpsData.msg  TempImuData.msg  VSEFusionData.msg
Catkin_Ws/src/extended_kalman_filter/src/ekf/: vse_ekf_class.cpp  vse_ekf_sim.cpp  vse_tf_frame_publisher_ekf_sim.cpp
Catkin_Ws/src/simulation/: CMakeLists.txt  package.xml
Catkin_Ws/src/simulation/cfg/: GNSS.cfg  SensorModel.cfg
Catkin_Ws/src/simulation/include/: gazebo_ros_gps.h  gazebo_ros_imu.h  navsat_conversions.h  sensor_model.h  update_timer.h
Catkin_Ws/src/simulation/launch/: keyboard.launch  simulation.launch
Catkin_Ws/src/simulation/models/car/: car.sdf  model.config
Catkin_Ws/src/simulation/models/car/meshes/: BMW27GE_TAIL_light.dae  BMW27GE_hosa wheel91.dae  BMW27GE_hosa wheeltilt1.dae  BMW_Transparent.dae  brake_light.dae  brake_light_optimized_0.4.dae  indicator_left.dae  indicator_left_optimized_0.4.dae  indicator_right.dae  indicator_right_optimized_0.4.dae  veloster_shell.dae  veloster_shell_optimized_0.4.dae  veloster_shell_wo_indicators.dae  veloster_wheel.dae  veloster_wheel_left.dae  veloster_wheel_left_optimized_0.4.dae  veloster_wheel_right.dae  veloster_wheel_right_optimized_0.4.dae
Catkin_Ws/src/simulation/models/car_model/: .~lock.model.sdf#  model.config  model.sdf
Catkin_Ws/src/simulation/models/gps/: model.config  model.sdf
Catkin_Ws/src/simulation/models/ground_plane/: model.config  model.sdf
Catkin_Ws/src/simulation/models/imu/: model.config  model.sdf
Catkin_Ws/src/simulation/models/map/: Aalto_ELEC.sdf  model.config
Catkin_Ws/src/simulation/msg/: SimJoystickAndKeyboard.msg  SimulatorTwist.msg  gpsData.msg  imuData.msg  wheelData.msg
Catkin_Ws/src/simulation/src/: car_controller_plugin_key_input.cpp  gazebo_ros_gps.cpp  gazebo_ros_imu.cpp  keyboard_input.cpp  wheel_plugin.cpp
