<?xml version="1.0"?>
<package>
  <name>simulation</name>
  <version>0.0.0</version>
  <description>The pillow_issue package</description>
  <maintainer email="duckfrost@theconstructsim.com">duckfrost</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <run_depend>message_runtime</run_depend> 
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>



  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
